--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,58 @@
-# requirements.txt (Updated)
-
 # Core Framework
-fastapi==0.116.2
-uvicorn==0.35.0
-python-multipart==0.0.20
-
-# --- CRITICAL ML/TRANSFORMER LIBRARIES (PINNED VERSIONS) ---
-sentence-transformers==5.1.0
-transformers==4.56.1
-huggingface-hub==0.35.0
-# hf_xet
-# -----------------------------------------------------------
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
 
 # Database
-pymongo==4.15.1
-motor==3.7.1
+pymongo==4.6.0
+motor==3.3.2
 
 # Vector Database
-chromadb==1.1.0
+chromadb==0.4.18
 
 # LangChain
-langchain==0.3.27
-langchain-community==0.3.29
-langchain_huggingface==0.3.1
+langchain==0.0.350
+langchain-community==0.0.3
+langchain-core==0.1.0
+
+# Embeddings & Models
+sentence-transformers==2.2.2
+transformers==4.36.2
+torch==2.5.0   # ✅ updated for Python 3.13
 
 # API Clients
-groq==0.31.1
-requests==2.32.5
+groq==0.4.1
+requests==2.31.0
 
 # Authentication
-python-jose[cryptography]==3.5.0
+python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-bcrypt==4.3.0
+bcrypt==4.1.2
 
 # Text Processing
-nltk==3.9.1
-spacy==3.8.7
+nltk==3.8.1
+spacy==3.7.2
 
 # Audio Processing
 pydub==0.25.1
 
+# Translation
+googletrans==4.0.0rc1
+
 # Data Processing
-pandas==2.3.2
-numpy==2.2.6
+pandas==2.1.4
+numpy==1.25.2
 
 # Web Interface
-streamlit==1.49.1
+streamlit==1.29.0
+streamlit-chat==0.1.1
+streamlit-mic-recorder==0.0.4
 
 # Utilities
-python-dotenv==1.1.1
-pydantic==2.11.9
-pydantic[email]==2.3.0
-httpx==0.28.1
-aiofiles==24.1.0
-deep_translator==1.11.4
+python-dotenv==1.0.0
+pydantic==2.5.2     # ✅ keep only one version
+httpx==0.26.0
+aiofiles==23.2.1
+
+# Removed invalid package:
+# sentence-transformers-cross-encoder==0.1.0
